tests/NormalTests/paczka1/small_fuzzy/42182814.err
Error in line 1: guyVfa1eP4Z A829 42,4
Error in line 9: wN3 S769 12,3
